[project]
name = "m3u8-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.30",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
exclude = ["exe", "browsers", "build", "dist"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
]
